# Standard-of-Iron

./: .clang-format  .clang-tidy  .clang_format  .gitignore  ARCHER_FIX_SUMMARY.md  AUDIO_EVENT_IMPLEMENTATION.md  BUGFIX_AI_PULLBACK.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  GRASS_RENDERING_IMPROVEMENTS.md  HEALER_VISUAL_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  KNIGHT_IMPLEMENTATION.md  MOVEMENT_FIX_VISUAL.md  Makefile  POSE_CONTROLLER_IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  RIVERBANK_DIAGRAM.txt  RIVERBANK_IMPLEMENTATION.md  SERIALIZATION_CHANGES.md  SKIRMISH_RESTART_FIX.md  TECHNICAL_MOVEMENT_FIX.md  TESTING_GROUP_MOVEMENT.md  TESTING_MOVEMENT_FIX.md  TESTING_SUMMARY.md  THIRD_PARTY_LICENSES.md  TODO.md  VICTORY_SERVICE.md  VISUAL_COMPARISON.md  assets.qrc  jira.md  main.cpp  qml_resources.qrc  test_audio.cpp  test_audio_event_handler.cpp  test_audio_integration.cpp  (+4 more)
animation/: CMakeLists.txt  action_manifest.cpp  action_manifest.h  ambient_pose_manifest.cpp  ambient_pose_manifest.h  attack_pose_manifest.cpp  attack_pose_manifest.h  clip_manifest.cpp  clip_manifest.h  combat_manifest.cpp  combat_manifest.h  elephant_gait_manifest.cpp  elephant_gait_manifest.h  guard_manifest.cpp  guard_manifest.h  hold_pose_manifest.cpp  hold_pose_manifest.h  horse_gait_manifest.cpp  horse_gait_manifest.h  intent_manifest.cpp  intent_manifest.h  layout_manifest.cpp  layout_manifest.h  locomotion_manifest.cpp  locomotion_manifest.h  micro_variation_manifest.cpp  micro_variation_manifest.h  mounted_pose_manifest.cpp  mounted_pose_manifest.h  playback_manifest.cpp  playback_manifest.h  pose_manifest.h  posture_pose_manifest.cpp  posture_pose_manifest.h  quadruped_gait_manifest.cpp  quadruped_gait_manifest.h  selection_manifest.cpp  selection_manifest.h  state_manifest.cpp  state_manifest.h
game/: CMakeLists.txt  game_config.h
game/audio/: AudioConstants.h  AudioEventHandler.cpp  AudioEventHandler.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  MiniaudioBackend.cpp  MiniaudioBackend.h  Music.cpp  Music.h  MusicPlayer.cpp  MusicPlayer.h  README.md  Sound.cpp  Sound.h  TESTING.md  audio_event_handler.cpp  audio_event_handler.h  audio_system.cpp  audio_system.h  miniaudio_backend.cpp  miniaudio_backend.h  music.cpp  music.h  music_player.cpp  music_player.h  music_transition.h  sound.cpp  sound.h
game/core/: NEUTRAL_BARRACKS.md  component.cpp  component.h  entity.cpp  entity.h  event_manager.cpp  event_manager.h  ownership_constants.h  serialization.cpp  serialization.h  system.cpp  system.h  world.cpp  world.h
game/map/: campaign_definition.h  campaign_loader.cpp  campaign_loader.h  environment.cpp  environment.h  json_keys.h  level_loader.cpp  level_loader.h  map_catalog.cpp  map_catalog.h  map_definition.h  map_loader.cpp  map_loader.h  map_transformer.cpp  map_transformer.h  mission_context.h  mission_definition.h  mission_loader.cpp  mission_loader.h  mission_victory_rules.cpp  mission_victory_rules.h  procedural_tree_generation.cpp  procedural_tree_generation.h  render_visibility_rules.h  skirmish_loader.cpp  skirmish_loader.h  terrain.cpp  terrain.h  terrain_landform.cpp  terrain_landform.h  terrain_noise.h  terrain_service.cpp  terrain_service.h  terrain_topology_audit.cpp  terrain_topology_audit.h  visibility_service.cpp  visibility_service.h  world_bootstrap.cpp  world_bootstrap.h
game/systems/: AUTO_ENGAGEMENT.md  CAPTURE_SYSTEM.md  FORMATION_COMPARISON.md  FORMATION_IMPLEMENTATION.md  FORMATION_SYSTEM.md  ai_system.cpp  ai_system.h  arrow_projectile.cpp  arrow_projectile.h  arrow_system.cpp  arrow_system.h  ballista_attack_system.cpp  ballista_attack_system.h  battlefield_capture.cpp  battlefield_capture.h  battlefield_definitions.cpp  battlefield_definitions.h  building_collision_registry.cpp  building_collision_registry.h  camera_controller.cpp  camera_controller.h  camera_follow_system.cpp  camera_follow_system.h  camera_service.cpp  camera_service.h  camera_visibility_service.cpp  camera_visibility_service.h  capture_system.cpp  capture_system.h  catapult_attack_system.cpp  catapult_attack_system.h  civilian_delivery_system.cpp  civilian_delivery_system.h  cleanup_system.cpp  cleanup_system.h  cohort_system.cpp  cohort_system.h  combat_rules.h  combat_status_effect_system.cpp  combat_status_effect_system.h  (+101 more)
game/units/: archer.cpp  archer.h  ballista.cpp  ballista.h  barracks.cpp  barracks.h  builder.cpp  builder.h  building_spawn_setup.cpp  building_spawn_setup.h  building_type.h  catapult.cpp  catapult.h  civilian.cpp  civilian.h  commander_catalog.cpp  commander_catalog.h  defense_tower.cpp  defense_tower.h  elephant.cpp  elephant.h  factory.cpp  factory.h  grave_priest.cpp  grave_priest.h  healer.cpp  healer.h  home.cpp  home.h  horse_archer.cpp  horse_archer.h  horse_spearman.cpp  horse_spearman.h  horse_swordsman.cpp  horse_swordsman.h  knight.cpp  knight.h  marketplace.cpp  marketplace.h  mounted_knight.cpp  (+20 more)
game/visuals/: action_vfx.cpp  action_vfx.h  team_colors.h  visual_catalog.cpp  visual_catalog.h
render/: CMakeLists.txt  anim_key.h  battle_render_optimizer.h  big_battle_optimizer.h  bone_palette_arena.cpp  bone_palette_arena.h  cache_constants.h  combat_dust_defaults.h  decoration_gpu.h  draw_part.h  draw_queue.cpp  draw_queue.h  draw_queue_soa.h  effects_submitter.cpp  effects_submitter.h  fair_lod_budget.h  frame_budget.h  graphics_settings.h  humanoid_base.cpp  humanoid_base.h  humanoid_math.cpp  humanoid_math.h  humanoid_specs.h  i_render_backend.h  i_render_pass.h  instance_transform.h  material.h  mesh_geometry_pool.cpp  mesh_geometry_pool.h  palette.cpp  palette.h  persistent_render_registry.cpp  persistent_render_registry.h  pose_palette_cache.cpp  pose_palette_cache.h  primitive_batch.cpp  primitive_batch.h  rain_gpu.h  render_archetype.cpp  render_archetype.h  (+43 more)
render/animation/: channel_evaluator.h  (+2 more)
tests/: CMakeLists.txt  README.md  test_assets.qrc  test_main.cpp  validator_integration_test.sh
tools/: CMakeLists.txt  battlefield_capture_main.cpp  clang_tidy_filter.sh
(+1667 files in other folders)
